# tacit

./: .gitignore  AMENDMENTS.md  AMM-V1-REFERENCE.md  AMM.md  BRIDGE.md  CBTC-ISSUER-DESIGN.md  FEATURES.md  FINALIZE.md  LICENSE  MIXER.md  README.md  SPEC-BID-VARIABLE-AMOUNT-AMENDMENT.md  SPEC-CUSD-CDP-AMENDMENT.md  SPEC-RANGE-ATTEST-AMENDMENT.md  SPEC-SWAP-VAR-AMENDMENT.md  SPEC-VARIABLE-AMOUNT-AMENDMENT.md  SPEC-WRAPPER-AMENDMENT.md  SPEC.md  design.html  design.md  package-lock.json  package.json  tacit.html
airdrop/: README.md  export-tokenholders-for-contract-0x00a6ba94bbb5474725515de88fe04f854f2dcb12.csv  export-tokenholders-for-contract-0xe9b1cfea55baa219e34301f2f31b9fd0921664ed.csv
assets/: roundup-2026-06.html
audit/: AUDIT-2026-06-23-tacit-v1-confidential-defi-bridge.md  AUDIT-2026-06-24-confidential-privacy-leaks.md  AUDIT-2026-06-25-v1-contract-surface-coalesced.md  AUDIT-2026-06-25-v1-mainnet-bughunt.md  AUDIT-2026-06-27-codex-farm-hardening-findings.md  AUDIT-2026-06-27-ultracode-opus48-farm-hardening.md  AUDITS.md  GREENLIGHT-PROMPT-classic-bp.md  MIGRATION-multigen-launch-posture-2026-06-23.md  PROMPT-v1-mainnet-bughunt-2026-06-25.md  TACIT_FINANCE_CONFIDENTIAL_POOL_AUDIT_CLAUDE_OPUS_2026-06-25.md  TACIT_FINANCE_CONFIDENTIAL_POOL_AUDIT_GPT55PRO_2026-06-24-RESPONSE.md  TACIT_FINANCE_CONFIDENTIAL_POOL_AUDIT_GPT55PRO_2026-06-24.md  TACIT_FINANCE_CONFIDENTIAL_POOL_AUDIT_GPT55PRO_2026-06-24.md.sha256  TACIT_FINANCE_CROSSCHAIN_AUDIT_CLAUDE_OPUS_2026-06-25-RESPONSE.md  TACIT_FINANCE_CROSSCHAIN_AUDIT_CLAUDE_OPUS_2026-06-25.md  TACIT_FINANCE_CROSSCHAIN_REFLECTION_AUDIT_GPT55PRO_2026-06-24-RESPONSE.md  TACIT_FINANCE_CROSSCHAIN_REFLECTION_AUDIT_GPT55PRO_2026-06-24.md  TACIT_FINANCE_CROSSCHAIN_REFLECTION_AUDIT_GPT55PRO_2026-06-24.md.sha256  (+25 more)
cf/: README.md
contracts/sp1/confidential/: Cargo.toml  build-all-network.sh  elf-vkey-pin.json  exec-bid.rs  exec-bridgemint.rs  exec-crosslane.rs  exec-farm.rs  exec-gap.rs  exec-lp.rs  exec-otc.rs  exec-platinum.rs  exec-prove.rs  exec-reflect-fixture.rs  exec-reflect-prove.rs  exec-swap.rs  gen-all-reflection-fixtures.sh  patch-harnesses-network.sh  readiness-gate.sh  verify-guest-slots.sh  verify-reflection-fixtures.sh  verify-reflection-slots.sh  verify-vkey-pin.sh
contracts/sp1/confidential/cxfer-core/: Cargo.toml
contracts/sp1/confidential/cxfer-core/src/: bitcoin.rs  bjj.rs  burn_deposit.rs  eth_reflection.rs  lib.rs  sigma.rs
contracts/sp1/confidential/elf/: cxfer-guest  reflection-prover
contracts/sp1/confidential/fixtures/: adaptor_claim_op.json  adaptor_lock_op.json  adaptor_refund_op.json  amm_ceremony_vk.json  bid_op.json  bpp_differential.json  bpp_out_of_range.json  bridge_burn.json  bridgemint_op.json  bridgestealthmint_op.json  btc_block.json  cbtc_mint_op.json  cbtc_redeem_reflection_input.json  cdp_close_op.json  cdp_liquidate_op.json  cdp_mint_op.json  cdp_topup_op.json  clearing_vectors.json  confidential_pool.json  crosslane_bid_op.json  crosslane_lp_op.json  crosslane_op.json  crosslane_otc_op.json  crosslane_swap_op.json  crossout_op.json  cxfer.json  cxfer_conservation_diff.json  cxfer_kernel.json  farm_bond_op.json  farm_harvest_op.json  farm_unbond_op.json  gen-swapbatch-verify-vector.mjs  get_amount_out_vectors.json  imt.json  lp_op.json  lp_protofee_op.json  lp_remove_op.json  lpbond_op.json  mixed_op.json  otc_op.json  (+42 more)
contracts/sp1/confidential/fixtures/classic_bp/: badpoint_A.json  badpoint_L0.json  badpoint_R0.json  badpoint_S.json  badpoint_T1.json  badpoint_T2.json  length_alias_m2.json  out_of_range.json  padded.json  tamper_A.json  tamper_L0.json  tamper_R0.json  tamper_S.json  tamper_T1.json  tamper_T2.json  tamper_a_final.json  tamper_b_final.json  tamper_mu.json  tamper_t_hat.json  tamper_tau_x.json  truncated.json  valid_m1_case0.json  valid_m1_case1.json  valid_m1_case2.json  valid_m2_case0.json  valid_m2_case1.json  valid_m2_case2.json  valid_m4_case0.json  valid_m4_case1.json  valid_m4_case2.json  valid_m8_case0.json  valid_m8_case1.json  valid_m8_case2.json  wrong_commitment.json
contracts/sp1/confidential/harnesses/: Cargo.toml  exec-adaptorclaim.rs  exec-adaptorlock.rs  exec-adaptorrefund.rs  exec-batchtransfer.rs  exec-bid.rs  exec-bridgeburn.rs  exec-bridgemint.rs  exec-bridgestealthmint.rs  exec-cbtcmint.rs  exec-cdpclose.rs  exec-cdpliquidate.rs  exec-cdpmint.rs  exec-cdptopup.rs  exec-crosslane.rs  exec-farm.rs  exec-farmbond.rs  exec-farmharvest.rs  exec-farmunbond.rs  exec-fastlane.rs  exec-gap.rs  exec-lp.rs  exec-lpbond.rs  exec-lpremove.rs  exec-mixed.rs  exec-otc.rs  exec-prove.rs  exec-route.rs  exec-sendunwrap.rs  exec-stealthclaim.rs  exec-stealthlock.rs  exec-stealthlockbatch.rs  exec-stealthrefund.rs  exec-swap.rs  exec-unwrap.rs  exec-wrap.rs  exec-wrapcdpmint.rs  exec-wraplp.rs  exec-wrapswap.rs  exec-wraptransfer.rs
contracts/sp1/confidential/src/: babyjubjub.rs  groth16.rs  main.rs  reflect.rs  secp.rs  swap_batch.rs  swap_blind.rs
contracts/sp1/eth-reflection/: Cargo.toml  SLOT120-EXCLUSION-FIX.md
contracts/sp1/eth-reflection/elf/: eth_reflection
contracts/sp1/eth-reflection/host/: eth_reflection_exec.rs
contracts/sp1/eth-reflection/prover-host/: Cargo.toml  run-reflect-loop.sh
contracts/sp1/eth-reflection/prover-host/src/: lib.rs
contracts/sp1/eth-reflection/src/: main.rs
contracts/sp1/program/: Cargo.toml
contracts/sp1/program/elf/: teth-pool-prover
contracts/sp1/program/src/: bitcoin.rs  groth16.rs  main.rs  merkle.rs  poseidon.rs  secp.rs
contracts/sp1/reflect-exec/: Cargo.toml
contracts/sp1/reflect-exec/src/: adaptor_execute.rs  bid_execute.rs  cbtc_mint_execute.rs  cdp_close_execute.rs  cdp_liquidate_execute.rs  cdp_mint_execute.rs  cdp_topup_execute.rs  farm_execute.rs  main.rs  otc_execute.rs  remaining_execute.rs  route_execute.rs  vkey_derive.rs
contracts/sp1/reflect-stdin/: Cargo.toml
contracts/sp1/reflect-stdin/src/: lib.rs
contracts/sp1/script/: Cargo.toml
contracts/sp1/script/src/: main.rs  vkey.rs
contracts/sp1/tree/: Cargo.toml
contracts/sp1/tree/src/: lib.rs  merkle.rs  poseidon.rs  tests.rs
(+1189 files in other folders)
