[package]
name = "confidential-pool-prover"
version = "0.1.0"
edition = "2021"

# SP1 guest for the Phase-1 confidential pool. Thin assembler over cxfer-core
# (the native-tested secp/keccak verification core); commits the ABI-encoded
# PublicValues that ConfidentialPool.settle decodes. Build: cargo prove build.
# The precompile patches accelerate the secp/sha256 inside cxfer-core in-zkVM
# (~29x fewer cycles); they apply to the guest build only, not cxfer-core's
# native tests.

# The settle guest (src/main.rs) and the reflection prover (src/reflect.rs) are two SP1
# programs sharing cxfer-core. Build a specific one with `cargo prove build --bin <name>`.
[[bin]]
name = "confidential-pool-prover"
path = "src/main.rs"

[[bin]]
name = "reflection-prover"
path = "src/reflect.rs"

[dependencies]
sp1-zkvm = { version = "6.2", features = ["verify"] } # provides syscall_verify_sp1_proof (Mode B recursion)
sp1-lib = { version = "6.2", features = ["verify"] } # verify_sp1_proof (Mode B recursion in reflect.rs)
cxfer-core = { path = "cxfer-core" }
alloy-sol-types = "0.8"
# BN254 Groth16 verifier for T_SWAP_BATCH (src/groth16.rs, reflection bin only — settle's main.rs never
# imports it, so it links into the reflection ELF only). SP1-precompile-accelerated `bn` API; the same crate
# sp1-verifier uses for SP1's own Groth16. Confirm the exact version/source on the box.
bn = { package = "substrate-bn-succinct-rs", version = "0.6.0", default-features = false }

[profile.release]
overflow-checks = true

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-6.2.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", package = "k256", tag = "patch-k256-13.4-sp1-6.2.0" }
