# eth-reflection guest (Mode B reverse reflection, Phase 1). Standalone SP1-guest workspace so the
# zkVM [patch] section applies. First build happens inside sp1-helios's workspace on the prover box
# (proven deps); this is the committed source-of-truth crate it vendors back to.
[package]
name = "eth-reflection-program"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eth_reflection"
path = "src/main.rs"

[dependencies]
sp1-zkvm = "6.2"
# Audited beacon light-client verification (helios 0.11.1 parses live `fulu` LC objects — confirmed).
helios-consensus-core = { git = "https://github.com/a16z/helios", tag = "0.11.1" }
# ProofInputs + verify_storage_slot_proofs + StorageSlot (reused verbatim).
sp1-helios-primitives = { git = "https://github.com/succinctlabs/sp1-helios", rev = "bbc1d66" }
# Single-sourced cross-out leaf + the headless append (must match the Bitcoin guest + the contract).
cxfer-core = { path = "../confidential/cxfer-core" }
alloy-primitives = { version = "1.3.0", features = ["sha3-keccak", "serde"] }
alloy-sol-types = "1.3.0"
alloy-trie = "0.9.5"
alloy-rlp = "0.3.15"
tree_hash = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11.2"

[workspace]

# zkVM-critical: sp1-patched crypto (bls12_381 carries the sync-committee BLS verify). Mirror of
# sp1-helios's workspace [patch]; tags are sp1-6.0.0 (compatible across SP1 6.x).
[patch.crates-io]
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.9.9-sp1-6.0.0" }
sha2-v0-10-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.9-sp1-6.0.0" }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-6.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-6.0.0" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-6.0.0-v2" }
ethereum_hashing = { git = "https://github.com/ncitron/ethereum_hashing", rev = "7ee70944ed4fabe301551da8c447e4f4ae5e6c35" }
