[package]
name = "teth-pool-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = "6.2"
teth-tree = { path = "../tree" }
sha2 = "0.10"
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
ark-groth16 = "0.5"
ark-serialize = "0.5"
ark-relations = "0.5"
ark-snark = "0.5"

k256 = { version = "0.13", default-features = false, features = ["arithmetic"] }

# SP1 patches for accelerated BN254 syscalls can be added when available.
# Without patches, ark-bn254 runs in pure Rust (slower proofs, same correctness).
