# Local execute-mode validator for the full-scan reflection guest. A SEPARATE crate from
# teth-prover so it can depend on sp1-sdk WITHOUT native-gnark (execute = the RISC-V emulator,
# no Groth16/Go FFI needed). Run: cargo run --release -- <reflection_input.json> [expectedDigest]
[package]
name = "reflect-exec"
version = "0.1.0"
edition = "2021"

[dependencies]
# Pinned =6.2.3 to match the prover box (prover-host / exec-prove): the vkey-derive bin must compute the
# SAME vkey the box's proving system pins, and the shared reflect-stdin SP1Stdin type must unify with it.
sp1-sdk = { version = "=6.2.3", default-features = false, features = ["blocking"] }
serde_json = "1"
hex = "0.4"
# Shared SP1Stdin serializer (the single source of truth for the guest's io::read order) — also used by
# the box recursion prover (eth-reflection/prover-host bitcoin_prove), so the two cannot drift.
reflect-stdin = { path = "../reflect-stdin" }

[[bin]]
name = "reflect-execute"
path = "src/main.rs"

# Derive a guest ELF's vkey locally (CPU setup): the on-chain bytes32 + the recursion [u32;8]
# (vk.hash_u32() = ETH_REFLECTION_VKEY). Mirrors prover-host/eth_vkey without its box-absolute deps.
[[bin]]
name = "vkey-derive"
path = "src/vkey_derive.rs"

# Local execute-mode validator for the OP_OTC settle guest: serializes fixtures/otc_op.json in the
# guest's io::read order (same as exec-otc.rs) and executes the locally-built cxfer-guest ELF — a
# clean run (no panic) proves the guest ACCEPTS the witness (every membership/sigma/conservation
# assert held in-zkVM), validating both the op logic and the byte serialization without a GPU proof.
[[bin]]
name = "otc-execute"
path = "src/otc_execute.rs"

# Same, for OP_BID (fixtures/bid_op.json) — validates the bid guest logic + serialization in-zkVM.
[[bin]]
name = "bid-execute"
path = "src/bid_execute.rs"

# Same, for OP_SWAP_ROUTE (fixtures/route_op.json) — validates the multihop route guest arm + serialization.
[[bin]]
name = "route-execute"
path = "src/route_execute.rs"

[profile.release]
overflow-checks = true
